--- a/src/sections/Header.css
+++ b/src/sections/Header.css
@@ -104,9 +104,9 @@
 }
 
 .ncsu-icon {
-    height: 90px;
+    height: 70px;
     width: auto;
-    max-width: 68px;
+    max-width: 60px;
     object-fit: contain;
     padding-right: 60px;
     box-sizing: content-box;
